--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,17 +1,10 @@
----
-layout: default
-title: Bernardo Loureiro
----
-
-<div id="projects">
-  <hr>
-  <h3>Projects</h3>
+<section id="projects">
   <div class="row">
     {% assign projects = site.data.projects | where: "status", "published" | sort: "order" %}
     {% for project in projects %}
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-md-6 project">
 
-        <div id="{{ project.hash }}Controls" class="carousel slide" data-ride="false" data-interval="2000" pause="false">
+        <div id="{{ project.hash }}-controls" class="carousel slide" data-ride="false" data-interval="4000" pause="false">
           <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
             <div class="carousel-inner">
               {% for i in project.otherImages %}
@@ -21,34 +14,35 @@ title: Bernardo Loureiro
               {% endfor %}
             </div>
           </a>
-          <a class="carousel-control-prev" href="#{{ project.hash }}Controls" role="button" data-slide="prev">
+          <!-- <a class="carousel-control-prev" href="#{{ project.hash }}-controls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#{{ project.hash }}Controls" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#{{ project.hash }}-controls" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-          </a>
+          </a> -->
         </div>
 
         <div class="project-text">
           <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
             <h4>{{ project.title }}  &#9660;</h4>
           </a>
-          <p class="small">{{ project.date | date: '%Y' }} | <span>{{ project.tags | array_to_sentence_string: "" }}</span></p>
+          {% for p in project.description %}
+            {% if forloop.first == true %}
+              <p>{{ p }}</p>
+            {% endif %}
+          {% endfor %}
           <div class="collapse" id="{{ project.hash }}">
             <div class="card card-body">
               {% for p in project.description %}
-                <p>{{ p }}</p>
+                {% if forloop.first == false %}
+                  <p>{{ p }}</p>
+                {% endif %}
               {% endfor %}
               <a href="{{ project.url }}" target="_blank">
                 Project site &raquo;
               </a>
-              {% for i in project.otherImages %}
-                <div class="">
-                  <img src="public/images/{{ project.hash }}/{{ i }}" class="d-block w-100">
-                </div>
-              {% endfor %}
               <hr>
               <p class="small">tools: <span>{{ project.tools | array_to_sentence_string: "" }}</span></p>
               {% if project.team != nil %}
@@ -64,10 +58,11 @@ title: Bernardo Loureiro
                   {% endfor %}
                 </p>
               {% endif %}
+              <p class="small">{{ project.date | date: '%Y' }} | <span>{{ project.tags | array_to_sentence_string: "" }}</span></p>
             </div>
           </div>
         </div>
       </div>
     {% endfor %}
   </div>
-</div>
+</section>
