--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col-xs-12">
-    <h1 class="title"><a href="">{{ site.name }}</a></h1>
+  <div class="col-xs-12 nav-links">
+    <span><a href="#projects">Projects</a> // </span>
+    <span><a href="#teaching">Teaching</a> // </span>
+    <span><a href="#media">Media</a></span>
   </div>
 </div>
