--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,36 +1,21 @@
 <section id="projects">
+  <h2>Projects</h2>
   <div class="row">
     {% assign projects = site.data.projects | where: "status", "published" | sort: "order" %}
     {% for project in projects %}
       <div class="col-xs-12 col-md-6 project">
 
-        <div id="{{ project.hash }}-controls" class="carousel slide" data-ride="false" data-interval="4000" pause="false">
-          <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
-            <div class="carousel-inner">
-              {% for i in project.otherImages %}
-                <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
-                  <img src="public/images/{{ project.hash }}/{{ i }}" class="d-block w-100">
-                </div>
-              {% endfor %}
-            </div>
-          </a>
-          <!-- <a class="carousel-control-prev" href="#{{ project.hash }}-controls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#{{ project.hash }}-controls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a> -->
-        </div>
+        {% assign images = project.otherImages %}
+        {% assign hash = project.hash %}
+        {% include carousel.html hash=hash images=images %}
 
         <div class="project-text">
           <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
-            <h4>{{ project.title }}  &#9660;</h4>
+            <h3>{{ project.title }}  &#9660;</h3>
           </a>
           {% for p in project.description %}
             {% if forloop.first == true %}
-              <p>{{ p }}</p>
+              <p class="project-p">{{ p }}</p>
             {% endif %}
           {% endfor %}
           <div class="collapse" id="{{ project.hash }}">
@@ -44,20 +29,12 @@
                 Project site &raquo;
               </a>
               <hr>
-              <p class="small">tools: <span>{{ project.tools | array_to_sentence_string: "" }}</span></p>
+              <!-- <p class="small">tools: <span>{{ project.tools | array_to_sentence_string: "" }}</span></p> -->
               {% if project.team != nil %}
                 <p class="small">team: <span>{{ project.team | array_to_sentence_string: "" }}</span></p>
               {% endif %}
-              {% if project.client != nil %}
-                <p class="small">client: <span>{{ project.client | array_to_sentence_string: "" }}</span></p>
-              {% endif %}
-              {% if project.media != nil %}
-                <p class="small">media:
-                  {% for pb in project.media %}
-                  <span><a href="{{ pb.link }}" target="_blank">{{ pb.name }}</a>{% if forloop.last == false %},{% endif %}</span>
-                  {% endfor %}
-                </p>
-              {% endif %}
+              {% include clients_footer.html %}
+              {% include media_footer.html %}
               <p class="small">{{ project.date | date: '%Y' }} | <span>{{ project.tags | array_to_sentence_string: "" }}</span></p>
             </div>
           </div>
