--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <body>
 
         <div class="container-fluid">
-          {% include nav.html %}
+          {% include title.html %}
 
           {{ content }}
 
